--- a/Index.html
+++ b/Index.html
@@ -1909,7 +1909,7 @@ window.FlexDashboardComponents.push({
 
 <div id="intro" class="section level1 sidebar">
 <h1 class="sidebar">Intro</h1>
-<p>This site bundles all the material used for the OJO workshop <span style="color: #447099">BSTAT_Edubron24</span>.</p>
+<p>This site bundles all the material used for the OJO workshop <span style="color: #EB6864">BSTAT_Edubron24</span>.</p>
 <hr />
 <p>Instructors:</p>
 <ul>
