--- a/Index.html
+++ b/Index.html
@@ -1970,20 +1970,12 @@ tab Preparations)</p>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">Monday February 5 (9:30 am - 4:00 pm)</td>
+<td align="left">Room S.C.102</td>
 </tr>
 <tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">Tuesday February 6 (9:30 am - 4:00 pm)</td>
+<td align="left">Room S.C.102</td>
 </tr>
 </tbody>
 </table>
